New function to estimate year of given CO² level
